= Changes with possible impact on caller project

* `local.conf` can be more easily tuned for project-specific needs
  using new `ci-mkconf-hook.sh`

* early version of SSTATE_MIRRORS usage caused absolute symlinks to
  mirrors (in ci-runner filesystem) to be rsync'd, for some yocto
  versions.  They are not sync'd any more, but any such symlink has to
  be removed manually from the rsync repository (eg. with `find -type
  l -delete`)

* oe-logs artifacts are now "expire_in: never", much like the job output

* buildhistory and prserv support are now optional

* copy-on-write sstate handling is now replaced by use of SSTATE_MIRRORS,
  local.conf in local build tree must be adjusted

* location of poky tree is not hardcoded any more, must now be specified
  through POKY_ENVINIT variable

* new rsync-sstate script to download shared state uploaded by the build

* log artifacts are now in generic `artifacts/` directory rather than
  in `oelogs/`