@@ -8,9 +8,6 @@
 # - POKY_ENVINIT: shell scriptlet to initialize oe environement (eg. "poky/oe-init-build-env")
 # - B: oe build directory
 # - BUILD_GEN: generation for separate shared-states
-# - BASEGEN_ALLOWED_BRANCHES (optional): space-separated list of branches allowed to contribute
-#   to a "base" (ie. without "+<suffix>"), to avoid accidental sstate polution (default empty,
-#   meaning "no restriction")
 # recommended global variables:
 # - BUILDHISTREPO: git buildhistory repository
 # - PRSERV: suitable value for PRSERV_HOST in local.conf
@@ -21,7 +18,7 @@
 .oe_setup:
   before_script:
     - BASEBRANCHNAME="${CI_COMMIT_REF_NAME#${BRANCHPREFIX_ARCH}/}"
-    - ./ci/mkconf --dir "${B}" --sstate-gen "${BUILD_GEN}" --download-dir "${HOME}/downloads-${POKY_BASE}" --template-conf "$PWD/conf-${BRANCHPREFIX_ARCH}" --buildhistory-repo "$BUILDHISTREPO" --buildhistory-ref "${BRANCHPREFIX_ARCH}/$BASEBRANCHNAME" --prserv "$PRSERV" --basegen-allowed-branches "$BASEGEN_ALLOWED_BRANCHES" --oe-env "${POKY_ENVINIT}"
+    - ./ci/mkconf --dir "${B}" --sstate-gen "${BUILD_GEN}" --download-dir "${HOME}/downloads-${POKY_BASE}" --template-conf "$PWD/conf-${BRANCHPREFIX_ARCH}" --buildhistory-repo "$BUILDHISTREPO" --buildhistory-ref "${BRANCHPREFIX_ARCH}/$BASEBRANCHNAME" --prserv "$PRSERV" --oe-env "${POKY_ENVINIT}"
 
 .oe_deploy:
   after_script:
